--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header{
   color: #fff !important;
   font-size: 16px;
   font-weight: 600;
-  text-transform: uppercase;
+  text-transform: uppercase; 
 }
 .custom_navbar .menu li:last-child a {
   margin-right: 0;
@@ -184,3 +184,101 @@ header{
 
 }
 /*EXPERTISE ebd*/
+/*foooter start*/
+.f-banner {
+  background: url(../images/footer-banner.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.f-logo{}
+.f-text{}
+.f-text address p{
+    margin-top: 30px;
+    font-family:Roboto-Light ;
+    font-size: 16px;
+    color: white;
+}
+.f-text  address p:hover{
+    color: #00e0d0;
+}
+.f1{
+    margin-top: 60px;
+}
+.f1 p a{
+    font-family:Roboto-Regular ;
+    font-weight: 400;
+    color: white;
+    text-decoration: none;
+}
+.f1 p a:hover{
+    color: #00e0d0;
+}
+.f2{}
+.f2 h4{
+    font-family:Roboto-Black ;
+    font-size: 16px;
+    font-weight: 900;
+    color: white;
+}
+.f2 h4:hover {
+   color: #00e0d0;
+}
+
+.f2-icon{
+    margin-top: 55px;
+}
+.f2-icon i{
+    color: white;
+    font-size: 25px;
+}
+.f2-icon i:hover{
+    color: #00e0d0;
+}
+.f2-text{
+    margin-top: 50px;
+}
+.f2-text p{
+    font-family:Roboto-Light ;
+    font-size: 16px;
+    color: white;
+}
+.f2-text p:hover{
+    color: #00e0d0;
+}
+.f-s{
+    margin-top: 45px;
+}
+.c-social{
+    margin-top: 110px;
+}
+.c-social ul li{
+    margin-right: 25px !important;
+}
+.c-social ul li:last-child{
+    margin-right: 0 !important;
+}
+.c-social ul li a{
+    text-align: center;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #00e0d0;
+    border-radius: 50%;
+    
+}
+.c-social ul li a i{
+    font-size: 40px;
+    margin-top: 5px;
+    transition: .3s;
+    color: #00e0d0;
+
+}
+.c-social ul li a i:hover{
+    transform: scale(.8);
+
+}
+
+/*foooter end*/
